# fennara-godot-mcp

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CONTEXT.md  LICENSE.md  README.md  THIRD_PARTY_NOTICES.md  install.ps1  install.sh  llms.txt
docs/: architecture.md  chat-vs-mcp.md  demos.md  examples.md  faq.md  fennara-vs-traditional-godot-mcp.md  github-metadata.md  manual-install.md  open-rpg-demo.md  providers.md  release.md  repo-map.md  setup.md  (+2 more)
local/crates/fennara-cli/: Cargo.toml
local/crates/fennara-cli/src/: app_layout.rs  doctor.rs  main.rs  project_guidance.rs  project_install.rs  release_client.rs  release_manifest.rs  release_package.rs  release_update.rs  self_update.rs  webview_prereq.rs  webview_runtime.rs
local/crates/fennara-daemon/: Cargo.toml
local/crates/fennara-daemon/src/runtime_daemon/: godot_bridge.rs  mod.rs  runtime_sessions.rs  state.rs
local/crates/fennara-daemon/src/runtime_daemon/chat/: assets.rs  auth.rs  ids.rs  images.rs  mod.rs  models.rs  openrouter.rs  schema.rs  settings.rs  store.rs  tools.rs
local/crates/fennara-daemon/src/runtime_daemon/chat/generation/: cost.rs  mod.rs  publisher.rs  request.rs  runner.rs  tool_loop.rs
local/crates/fennara-daemon/src/runtime_daemon/chat/providers/: capability_check.rs  catalog.rs  catalog_cache.rs  context.rs  deepseek.rs  error.rs  lmstudio.rs  mod.rs  models_dev.rs  ollama.rs  ollama_cloud.rs  openrouter.rs  request.rs  resolver.rs  sse.rs  stream.rs  types.rs  usage.rs  zai.rs
local/crates/fennara-daemon/src/runtime_daemon/chat/providers/adapters/: openai_compatible.rs
(+270 files in other folders)
