[package]
name = "fennara-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "fennara"
path = "src/main.rs"

[dependencies]
serde_json = "1.0"
ureq = { version = "2.12", features = ["json"] }
zip = { version = "2.2", default-features = false, features = ["deflate"] }
