[package]
name = "fennara-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "fennara"
path = "src/main.rs"

[dependencies]
json5 = "0.4"
serde_json = "1.0"
sha2 = "0.10"
toml_edit = "0.22"
ureq = { version = "2.12", features = ["json"] }
zip = { version = "2.2", default-features = false, features = ["deflate"] }
